# whybist

./: .gitignore  README.md  docker-compose.yml
.github/actions/python-ci/: action.yml
.github/workflows/: ci.yml
services/auth/: .dockerignore  .env.test  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  run.sh
services/auth/src/app/: dependencies.py  service.py
services/auth/src/app/api/: handler.py  schemas.py
services/auth/src/app/config/: config.py
services/auth/src/app/core/: exceptions.py  security.py
services/auth/src/app/database/: database.py  models.py  repository.py
services/auth/src/app/database/alembic/: env.py
services/auth/src/app/database/alembic/versions/: fd30f101d109_initial_model.py
services/auth/src/app/logic/: auth_service.py
services/auth/src/tests/: conftest.py
services/auth/src/tests/integration/: test_api.py
services/auth/src/tests/unit/: test_auth_service.py
services/movie/: pyproject.toml
services/movie/src/app/: dependencies.py  service.py
services/movie/src/app/api/: handler.py  schemas.py
services/movie/src/app/config/: config.py
services/movie/src/app/core/: exceptions.py
services/movie/src/app/external_services/: kinopoisk.py
services/movie/src/app/logic/: movie_service.py
